# image-processor

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  application.cc  application.h  application_config.h  main.cc
lib/: CMakeLists.txt
lib/model/: CMakeLists.txt  gl_kernel_processor_shader_program.cc  gl_kernel_processor_shader_program.h  gl_shader.cc  gl_shader.h  gl_texture.cc  gl_texture.h  gl_texture_kernel_processor.cc  gl_texture_kernel_processor.h  image_processor_model.cc  image_processor_model.h  kernel.cc  kernel.h
lib/model/shader_programs/: gl_average_shader_program.cc  gl_average_shader_program.h  gl_edge_detector_shader_program.cc  gl_edge_detector_shader_program.h  gl_kernel_based_shader_program.cc  gl_kernel_based_shader_program.h  gl_median_shader_program.cc  gl_median_shader_program.h  gl_shader_program.cc  gl_shader_program.h
lib/model/texture_processors/: gl_texture_average_processor.cc  gl_texture_average_processor.h  gl_texture_edge_detector_processor.cc  gl_texture_edge_detector_processor.h  gl_texture_kernel_processor.cc  gl_texture_kernel_processor.h  gl_texture_median_processor.cc  gl_texture_median_processor.h  gl_texture_processor.cc  gl_texture_processor.h  gl_texture_processor_factory.cc  gl_texture_processor_factory.h
lib/view/: CMakeLists.txt  file_dialog_view.cc  file_dialog_view.h  image_processor_application_view.cc  image_processor_application_view.h  image_processor_view.cc  image_processor_view.h  image_view.cc  image_view.h  texture_processors_list_view.cc  texture_processors_list_view.h  view.cc  view.h
lib/view/texture_processors/: average_texture_processor_view.cc  average_texture_processor_view.h  edge_detector_texture_processor_view.cc  edge_detector_texture_processor_view.h  kernel_texture_processor_view.cc  kernel_texture_processor_view.h  median_texture_processor_view.cc  median_texture_processor_view.h  texture_processor_view.cc  texture_processor_view.h
res/: CMakeLists.txt
res/shaders/: average.frag  edge_detector.frag  kernel_based.frag  kernel_processor.frag  kernel_processor.vert  median.frag
